syntax = "proto3";

option go_package = "infrastructure/grpcserver/services/files";
option java_package = "com.grpc.demo.services";

package pb;

service FilesRoute {
  rpc Ping (PingRequest) returns (PingReply);
  rpc CreateFolder (CreateFolderRequest) returns (CreateFolderResponse); 
  rpc GetFolderFiles (GetAllFilesRequest) returns (GetAllFilesResponse); 
  rpc GetProperties (GetFileRequest) returns (GetFileResponse); 
  rpc DeleteFile (DeleteFileRequest) returns (DeleteFileResponse); 
  rpc RenameFile (RenameFileRequest) returns (RenameFileResponse);
  rpc GetSharedFiles (GetSharedFilesRequest) returns (GetSharedFilesResponse);
  
  rpc Upload(stream FileUploadRequest) returns(FileUploadResponse);
  rpc Download(DownloadRequest) returns (stream DownloadResponse); 
  rpc RestoreVersion(RestoreVersionRequest) returns (RestoreVersionResponse); 
  rpc ListVersions(GetVersionsRequest) returns (GetVersionsResponse);

  rpc ChmodFile(ChangePermissionsRequest) returns (ChangePermissionsResponse);
  rpc ChownFile(ChangeGroupRequest) returns (ChangeGroupResponse);
  
  rpc MoveFile (MoveFileRequest) returns (MoveFileResponse); // **********
}

message File {
  string name = 1;
  string path = 2;
  int64 size = 3;
  string updatedAt = 5;
  string fileType = 6;
}

message PingRequest {}

message PingReply {
  string message = 1;
}

// --------------------- Get Shared Files
message GetSharedFilesRequest {
  string username = 1;
}

message GetSharedFilesResponse {
  repeated string files = 1;
}

// --------------------- Change perms
message ChangePermissionsRequest {
  string filePath = 1;
  int64 permissions = 2;
}

message ChangePermissionsResponse {
  bool success = 1;
  string message = 2;
}

// --------------------- Change perms
message ChangeGroupRequest {
  string filePath = 1;
  string group = 2;
}

message ChangeGroupResponse {
  bool success = 1;
  string message = 2;
}

// --------------------- Get versions
message GetVersionsRequest {
  string filePath = 1;
}

message GetVersionsResponse {
  repeated string versionsName = 1;
}

// --------------------- Create Folder
message CreateFolderRequest {
  string folderPath = 1;
  string folderName = 2;
  string username = 3;
}

message CreateFolderResponse {
  bool success = 1;
  string message = 2;
}

// --------------------- Get Version
message RestoreVersionRequest {
  string filePath = 1;
  string fileName = 2;
  string versionId = 3;
}

message RestoreVersionResponse {
  bool success = 1;
  string message = 2;
}


// --------------------- Rename File
message RenameFileRequest {
  string filePath = 1;
  string newName = 2;
  string username = 3;
}

message RenameFileResponse {
  bool success = 1;
  string message = 2;
}

// --------------------- Download File
message DownloadFileRequest {
  string filePath = 1;
}

message FileChunk {
  bytes chunk = 1;
  int32 chunkSize = 2;
}

// --------------------- Upload File
message FileUploadRequest {
  string fileName = 1;
  string folderPath = 2;
  bytes chunk = 3;
}

message FileUploadResponse {
  string fileName = 1;
  uint32 size = 2;
}
 
// --------------------- Get All Files
message GetAllFilesRequest {
  string folderPath = 1;
}

// message GetAllFilesResponse {
//   repeated File files = 1;
// }

message GetAllFilesResponse {
  string tree = 1;
}

/**
* Obtiene solo la informaci√≥n de un archivo
*/
message GetFileRequest {
  string path = 1;
}

message GetFileResponse {
  File file = 1;
}

// --------------------- Get Files from path
message GetFilesFromPathRequest {
  string path = 1;
}

message GetFilesFromPathResponse {
  repeated File files = 1;
}

// --------------------- Delete File
message DeleteFileRequest {
  string path = 1;
  string username = 2;
}

message DeleteFileResponse {
  bool success = 1;
  string message = 2;
}

// --------------------- Move File
message MoveFileRequest {
  string currentPath = 1;
  string newPath = 2;
}

message MoveFileResponse {
  bool success = 1;
}

// --------------------- Download File
message DownloadRequest {
  string path = 1;
}

message DownloadResponse {
  bytes chunk = 1;
}

// --------------------- 

message UpdateMessage {
  string type = 1;
  string message = 2;
  File file = 3;
} 